src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
.ad {
  width: 236px;
  margin: 14px 7px 0 7px;
  background-color: #fff;
  border: 1px solid #ccc;
  border-bottom: 0;
  border-radius: @border-radius-base;
  box-shadow: 0 1px 1px #999;

  .ad-section {
    border-top: 1px solid @border-color;
    padding: 5px 10px;

    > p {
      font-size: 13px;
      margin: 0;
    }
  }

  .ad-counter {
    border-top: 0;

    a {
      color: #888;
      font-size: 11px;
      font-weight: bold;
    }
  }

  .ad-user {
    border-top: 1px solid @border-color;
    border-radius: 0 0 @border-radius-base @border-radius-base;
    margin-top: 5px;
    position: relative;
  }
  .ad-user-action {
    position: absolute;
    right: 0;
    top: 0;
    .btn {
      height: 40px;
      padding: 12px;
    }
    .btn-default, .btn-primary {
      border-bottom: 0;
      border-top: 0;
      border-radius: 0 0 @border-radius-base 0;
    }
    .btn-red {
      color: #b00;
    }
    > .btn-group .btn-default {
      border-right: 0;
    }
    .btn-group:first-child>.btn:last-child,
    .btn-group:first-child>.dropdown-toggle {
      border-bottom-right-radius: @border-radius-base;
    }
    .unpromote:hover {
      background-color: #333;
      border-color: #333;
    }
  }
}

.user-mini {
  .user-desc {
    line-height: 1;
    margin: 0;
    float: left;
  }
  .profile-picture {
    float: left;
    margin-right: 10px;
    width: 30px;
  }
  .profile-picture-img {
      width: 30px;
  }
  .user-label {
    color: #aaa;
    font-size: 11px;
  }
  .user-realname {
    font-size: 13px;
    font-weight: bold;
    margin-bottom: 4px;
  }
  .user-realname-a {
    color: #555;
  }
}

.pic {
  background-image: url('../img/diagonal-line.png');
  border-radius: @border-radius-base @border-radius-base 0 0;
  position: relative;

  img {
    background: url('../img/spinner.gif') no-repeat center center;
    border-radius: @border-radius-small @border-radius-small 0 0;
  }

  .promoted-container {
    position: absolute;
    top: 0;
    right: 0;
    width: 50px;
    height: 50px;
    #gradient > .directional(rgba(0,187,0,1) 50%, rgba(0,187,0,0) 0%, 225deg);
  }

  .promoted {
    position: absolute;
    top: 2px;
    right: 5px;
    color: #fff;
    font-size: 20px;
  }
}

.toolbar {
  .btn-group > .btn-promote {
    margin-left: 0;
    margin-right: 1px;
    width: 100px;
    height: 30px;
  }
  .btn-group > .btn-promote:not(:first-child):not(:last-child) {
    .border-left-radius(@border-radius-small);
  }
  .promotes-count {
    font-weight: bold;
  }
}

#ad-detail-container {
  position: relative;
  width: 1000px;
  margin: auto;

  .panel-body {
    padding: 10px;
    border-bottom: 1px solid @border-color;

    &:last-child {
      border-bottom: 0;
    }
  }

  .ad-description,
  .user-about {
    color: #555;
    font-size: 13px;
  }

  p {
    margin: 0;
  }
}

#ad-detail-content {
  width: 750px;

  .lead {
    font-size: 16px;
  }

  img {
    .img-responsive(inline-block);
  }
}

#ad-detail-sidebar {
  width: 236px;
  margin-left: 14px;
}

.thumb-container {
  font-size: 0;
  width: 234px;
  padding: 10px 10px 0;

  .thumb {
    border: 1px solid @border-color;
    font-size: 16px;
    width: 102px;
    height: 102px;
    display: inline-block;
    margin: 0 10px 10px 0;
    border-radius: @border-radius-base;

    > img {
      border-radius: @border-radius-small;
    }

    &:nth-child(2n) {
      margin-right: 0;
    }
  }
}


@media screen and (max-width: @screen-tablet) {
  #ad-detail-container, #ad-detail-content {
    width: 100%;
  }
  #ad-detail-sidebar {
    display: none;
  }
}

@media screen and (max-width: 480px) {
  .ad {
    width: 100%;
    height: 100%;
    margin: 10px 0;
  }
  .pic img {
    width: 100%;
    height: 100%;
  }
}

